--- a/Assignment3/Views/Home/Index.cshtml
+++ b/Assignment3/Views/Home/Index.cshtml
@@ -2,7 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+</head>
+<body class="homeBack">
+    <h1>Rotten Potatoes</h1>
+    <h3>Check out the sentiment ratings for your favorite movies and actors!</h3>
+    
+</body>
+</html>
