--- a/Assignment3/wwwroot/css/site.css
+++ b/Assignment3/wwwroot/css/site.css
@@ -15,4 +15,67 @@ html {
 
 body {
   margin-bottom: 60px;
+  font-family: 'Comic Sans MS'
 }
+
+h1{
+    color: tan;
+}
+
+h3{
+    width: 500px;
+}
+
+body{
+    text-align: center;
+    
+}
+
+.homeBack {
+    background-image: url(/images/potatohome.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    text-align: left;
+}
+
+table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    text-align: center;
+    
+}
+
+thead {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+}
+
+th, td {
+    padding: 12px 15px;
+}
+
+tbody, tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+ tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
+
+    tbody, tr:last-of-type {
+        border-bottom: 2px solid #009879;
+    }
+tbody tr.active-row {
+            font-weight: bold;
+            color: deeppink;
+}
+
+    tr:hover {
+        background-color: deeppink;
+    }
